--- a/index.html
+++ b/index.html
@@ -67,14 +67,16 @@
                             <div class="subheading mb-3">Capital One</div>
                             <p> In Progress</p>
                         </div>
+                        
                         <div class="flex-shrink-0"><span class="text-primary">June 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineering Intern</h3>
                             <div class="subheading mb-3">Cargill</div>
-                            <p></p>
+                            <p>In Progress</p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Champaign, IL</span></div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2020 - December 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -84,14 +86,6 @@
                             <p>In Progress</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2018 - December 2019</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
                 </div>
             </section>
