Added new location to Experience

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <div class="subheading mb-3">Capital One</div>
                             <p> In Progress</p>
                         </div>
-                        
+                        <div class="flex-shrink-0"><span class="text-primary">New York City, NY</span></div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -85,6 +85,7 @@
                             <div class="subheading mb-3">UIUC School of Information Sciences</div>
                             <p>In Progress</p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Champaign, IL</span></div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2018 - December 2019</span></div>
                     </div>
                 </div>
