Trial and error

--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
                             <div class="subheading mb-3">UIUC School of Information Sciences</div>
                             <p>In Progress</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Champaign, IL</span></div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2018 - December 2019</span></div>
+                        <div class="flex-grow-1"></div>
+                            <div class="flex-shrink-0"><span class="text-primary">Champaign, IL</span></div>
+                            <div class="flex-shrink-0"><span class="text-primary">December 2018 - December 2019</span></div>
+                        </div>
                     </div>
                 </div>
             </section>
