--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineering Intern</h3>
-                            <div class="subheading mb-3">Cargill</div>
+                            <!-- <div class="subheading mb-3">Cargill</div> -->
                             <div class="subheading mb-3">Champaign, IL</div>
                             <p>In Progress</p>
                         </div>
