--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineering Intern</h3>
-                            <!-- <div class="subheading mb-3">Cargill</div> -->
-                            <div class="subheading mb-3">Champaign, IL</div>
+                            <div class="subheading mb-3">Cargill</div>
                             <p>In Progress</p>
                         </div>
-                        <!-- <div class="flex-shrink-0"><span class="text-primary"></span></div> -->
                         <div class="flex-shrink-0"><span class="text-primary">May 2020 - December 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -87,7 +85,6 @@
                             <p>In Progress</p>
                         </div>
                         <div class="flex-grow-1"></div>
-                            <div class="flex-shrink-0"><span class="text-primary">Champaign, IL</span></div>
                             <div class="flex-shrink-0"><span class="text-primary">December 2018 - December 2019</span></div>
                         </div>
                     </div>
