Updated Description for Experience

--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
                             webpage component for Splinter, a blockchain-inspired platform for distributed applications
                             that uses ditributed ledgers and smart contracts. This helped to enhance
                             the user experience of administrators by integrating user-centered UI/UX designs with smart
-                            contract functionality in Splinter using React and JavaScript. Second, I worked in a
-                            cross-functional team to implement a prototype dashboard for animal supply chain division in
-                            Cargill which helped to improve the efficiency of formulation managers by building out a
-                            customized dashboard using TypesScript, .NetCore, React and C#.</p>
+                            contract functionality in Splinter using React and JavaScript.</p>
+                        <p> Second, I worked in a cross-functional team to implement a prototype dashboard for animal
+                            supply chain division in Cargill which helped to improve the efficiency of formulation
+                            managers by building out a customized dashboard using TypesScript, .NetCore, React and C#.
+                        </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">May 2020 - December 2020</span></div>
                 </div>
