Updated Experience for Cargill

--- a/index.html
+++ b/index.html
@@ -80,15 +80,22 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Software Engineering Intern</h3>
                         <div class="subheading mb-3">Cargill</div>
-                        <p> Worked at the Innovation Lab in Cargill in a fully intern-led team. During the course of my
-                            internship, I worked on 3 separate projects. First, I helped build out a smart contract
-                            webpage component for Splinter, a blockchain-inspired platform for distributed applications
-                            that uses ditributed ledgers and smart contracts. This helped to enhance
-                            the user experience of administrators by integrating user-centered UI/UX designs with smart
-                            contract functionality in Splinter using React and JavaScript.</p>
-                        <p> Second, I worked in a cross-functional team to implement a prototype dashboard for animal
-                            supply chain division in Cargill which helped to improve the efficiency of formulation
-                            managers by building out a customized dashboard using TypesScript, .NetCore, React and C#.
+                        <p> Built out a smart contract webpage component for Splinter, a blockchain-inspired platform
+                            for distributed applications that uses distributed ledgers and smart contracts</p>
+                        <p> Enhanced user experience of administrators by integrating user-centered UI/UX designs with
+                            smart contract functionality in Splinter using React and JavaScript
+                        </p>
+
+                        <p> Implemented a prototype dashboard for the animal supply chain division as part of a
+                            student-led, cross-functional team utilizing Agile methodologies
+                        </p>
+
+                        <p> Improved efficiency of formulation managers by building out a customized 5-tabbed dashboard
+                            containing 15 modules using Typescript, .Net Core, React and C#
+                        </p>
+
+                        <p> Designed and built a web-based calculator to help farmers determine the ROI for sustainable
+                            farming practices using React (See it here: https://mycropcalc.com/)
                         </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">May 2020 - December 2020</span></div>
