Description in Cargill

--- a/index.html
+++ b/index.html
@@ -80,6 +80,33 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Software Engineering Intern</h3>
                         <div class="subheading mb-3">Cargill</div>
+                        <ul>
+                            <li>
+                                Built out a smart contract webpage component for Splinter, a blockchain-inspired
+                                platform
+                                for distributed applications that uses distributed ledgers and smart contracts
+                            </li>
+
+                            <li>
+                                Enhanced user experience of administrators by integrating user-centered UI/UX designs with
+                            smart contract functionality in Splinter using React and JavaScript
+                            </li>
+
+                            <li>
+                                Implemented a prototype dashboard for the animal supply chain division as part of a
+                            student-led, cross-functional team utilizing Agile methodologies
+                            </li>
+
+                            <li>
+                                Improved efficiency of formulation managers by building out a customized 5-tabbed dashboard
+                            containing 15 modules using Typescript, .Net Core, React and C#
+                            </li>
+
+                            <li>
+                                Designed and built a web-based calculator to help farmers determine the ROI for sustainable
+                            farming practices using React (See it here: https://mycropcalc.com/)
+                            </li>
+                        </ul>
                         <p> Built out a smart contract webpage component for Splinter, a blockchain-inspired platform
                             for distributed applications that uses distributed ledgers and smart contracts</p>
                         <p> Enhanced user experience of administrators by integrating user-centered UI/UX designs with
