Added Description in UIUC School of Information Sciences

--- a/index.html
+++ b/index.html
@@ -114,7 +114,21 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Research Assistant</h3>
                         <div class="subheading mb-3">UIUC School of Information Sciences</div>
-                        <p>In Progress</p>
+                        <ul>
+                            <li>
+                                Presented research titled “Analyzing Data Visualization Tools for Effectiveness of Network Analysis” at annual Undergraduate Research Symposium in UIUC
+                            </li>
+
+                            <li>
+                                Collaborated with a group of research assistants to analyze data visualization tools such as Neo4J and network analysis tools such as CiteSpace for effectiveness on different sets of text data
+                            </li>
+
+                            <li>
+                                Prepared academic papers for text data processing through conversion of academic papers to ASCII
+                            </li>
+
+                            
+                        </ul>
                     </div>
                     <div class="flex-grow-1"></div>
                     <div class="flex-shrink-0"><span class="text-primary">December 2018 - December 2019</span></div>
