--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                     <div class="subheading mb-3">Bachelor of Science</div>
                     <div>Double Major in Computer Science + Economics & Statistics </div>
                     <p>GPA: 4.00</p>
+                    <p>Honors: Deans List in all semesters, Liberal Arts & Science James Scholar</p>
                 </div>
                 <div class="flex-shrink-0"><span class="text-primary">August 2018 - May 2022</span></div>
             </div>
