Added KPMG Singapore

--- a/index.html
+++ b/index.html
@@ -133,6 +133,33 @@
                     <div class="flex-grow-1"></div>
                     <div class="flex-shrink-0"><span class="text-primary">December 2018 - December 2019</span></div>
                 </div>
+
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Advisory Intern</h3>
+                        <div class="subheading mb-3">KPMG Singapore</div>
+                        <ul>
+                            <li>
+                                Assigned to the Internal Audit, Risk & Compliance Services (IARCS) department
+                            </li>
+
+                            <li>
+                                Performed Advisory and Audit services for Real Estate Investment Trusts (REITs), Charities and Schools pertaining to internal controls and compliance with government recommendations
+                            </li>
+
+                            <li>
+                                Assisted in providing observations for control weaknesses and non-compliance and recommendations for remedial actions
+                            </li>
+                            <li>
+                                Performed analysis on 30 years of Auditor-General Office of Singapore’s Annual Audit Report findings pertaining to control weaknesses and non-compliance in Singapore’s Ministries and Statutory Boards
+                            </li>
+
+                            
+                        </ul>
+                    </div>
+                    <div class="flex-grow-1"></div>
+                    <div class="flex-shrink-0"><span class="text-primary">December 2018 - December 2019</span></div>
+                </div>
             </div>
     </div>
     </section>
