--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
 
                             <li>
                                 Designed and built a web-based calculator to help farmers determine the ROI for sustainable
-                            farming practices using React (See it here: https://mycropcalc.com/)
+                            farming practices using React (See it <a href="https://mycropcalc.com/">here</a>)
+
+                            
                             </li>
                         </ul>
                     </div>
