--- a/index.html
+++ b/index.html
@@ -104,8 +104,6 @@
                             <li>
                                 Designed and built a web-based calculator to help farmers determine the ROI for sustainable
                             farming practices using React (See it <a href="https://mycropcalc.com/">here</a>)
-
-                            
                             </li>
                         </ul>
                     </div>
@@ -174,8 +172,11 @@
                     <h3 class="mb-0">University of Illinois at Urbana-Champaign</h3>
                     <div class="subheading mb-3">Bachelor of Science</div>
                     <div>Double Major in Computer Science + Economics & Statistics </div>
-                    <p>GPA: 4.00</p>
-                    <div>Honors: Deans List in all semesters, Liberal Arts & Science James Scholar</div>
+                    
+                    <div>
+                        <p>GPA: 4.00</p>
+                        <p>Honors: Deans List in all semesters, Liberal Arts & Science James Scholar </p>
+                    </div>
                 </div>
                 <div class="flex-shrink-0"><span class="text-primary">August 2018 - May 2022</span></div>
             </div>
