--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                     205 E Clark Street · Champaign, IL 61820 · (217) 974-5482 ·
                     <a href="mailto:ysho2@illinois.edu">ysho2@illinois.edu</a>
                 </div>
-                <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
+                <p class="lead mb-5">Hi! I am Yi!</p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/yi-shian-ho/"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/hoyishian"><i class="fab fa-github"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                    <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+                    <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a> -->
                 </div>
             </div>
         </section>
@@ -84,7 +84,7 @@
 
                         </ul>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">May 2020 - December 2020</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">June 2021 - August 2021</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
