--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
                     205 E Clark Street · Champaign, IL 61820 · (217) 974-5482 ·
                     <a href="mailto:ysho2@illinois.edu">ysho2@illinois.edu</a>
                 </div>
-                <p class="lead mb-5">Hi! I am Yi! I am a rising Senior studying Computer Science + Economics and
-                    Statistics at the University of Illinois at Urbana-Champaign. I enjoy solving problems through the
-                    building of software.</p>
+                <p class="lead mb-5">Hi, I am Yi! I am a rising Senior studying Computer Science + Economics and
+                    Statistics at the University of Illinois at Urbana-Champaign. I was born in Pennsylvania, but spent
+                    most of my life in tropical Singapore. I
+                    then moved back to the freezing United States Midwest for my college education.
+                </p>
+
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/yi-shian-ho/"><i
                             class="fab fa-linkedin-in"></i></a>
