Added Leadership Section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li> -->
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#leadership">Leadership</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
             </ul>
         </div>
@@ -234,6 +235,133 @@
                 </div>
                 <div class="flex-shrink-0"><span class="text-primary">August 2018 - May 2022</span></div>
             </div>
+        </div>
+    </section>
+    <hr class="m-0" />
+    <section class="resume-section" id="leadership">
+        <div class="resume-section-content">
+            <h2 class="mb-5">Leadership & Involvement</h2>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Co-Director</h3>
+                    <div class="subheading mb-3">HackIllinois</div>
+                    <p> In Progress </p>
+                </div>
+                <div class="flex-shrink-0"><span class="text-primary">June 2021 - Present</span></div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Senior Consultant</h3>
+                    <div class="subheading mb-3">Illinois Business Consulting (IBC) at UIUC</div>
+                    <ul>
+                        <li>
+                            Provided company-wide process improvements and next-step commercialization plans to a
+                            college bookstore and an information security research firm
+                        </li>
+
+                        <li>
+                            Led a team to produce training resources for employees of college bookstore in use of
+                            inventory management system
+                        </li>
+
+                        <li>
+                            Co-led a team to craft an 18-month commercialization plan for an information security
+                            research company launching a risk mitigation software
+                        </li>
+
+
+                    </ul>
+                </div>
+                <div class="flex-shrink-0"><span class="text-primary">June 2021 - Present</span></div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Vice-President (External)/ Treasurer</h3>
+                    <div class="subheading mb-3">Singapore Student Association at UIUC</div>
+                    <ul>
+                        <li>
+                            Managed an annual budget of $7,000 for Singapore Student Association at UIUC
+                        </li>
+
+                        <li>
+                            Planned and coordinated Singaporean career networking event with Singaporean government
+                            officials and company representatives for 50 UIUC students
+                        </li>
+
+                        <li>
+                            Implemented a prototype dashboard for the animal supply chain division as part of a
+                            student-led, cross-functional team utilizing Agile methodologies
+                        </li>
+
+                        <li>
+                            Organized a 2-day, 1-night SSA-UIUC orientation program trip to Chicago for 30 members
+                            through coordination of transport, food and tours in Chicago
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="flex-shrink-0"><span class="text-primary">May 2020 - December 2020</span></div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Research Assistant</h3>
+                    <div class="subheading mb-3">UIUC School of Information Sciences</div>
+                    <ul>
+                        <li>
+                            Presented research titled “Analyzing Data Visualization Tools for Effectiveness of
+                            Network Analysis” at annual Undergraduate Research Symposium in UIUC
+                        </li>
+
+                        <li>
+                            Collaborated with a group of research assistants to analyze data visualization tools
+                            such as Neo4J and network analysis tools such as CiteSpace for effectiveness on
+                            different sets of text data
+                        </li>
+
+                        <li>
+                            Prepared academic papers for text data processing through conversion of academic papers
+                            to ASCII
+                        </li>
+
+
+                    </ul>
+                </div>
+                <div class="flex-grow-1"></div>
+                <div class="flex-shrink-0"><span class="text-primary">December 2018 - December 2019</span></div>
+            </div>
+
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Advisory Intern</h3>
+                    <div class="subheading mb-3">KPMG Singapore</div>
+                    <ul>
+                        <li>
+                            Assigned to the Internal Audit, Risk & Compliance Services (IARCS) department
+                        </li>
+
+                        <li>
+                            Performed Advisory and Audit services for Real Estate Investment Trusts (REITs),
+                            Charities and Schools pertaining to internal controls and compliance with government
+                            recommendations
+                        </li>
+
+                        <li>
+                            Assisted in providing observations for control weaknesses and non-compliance and
+                            recommendations for remedial actions
+                        </li>
+                        <li>
+                            Performed analysis on 30 years of Auditor-General Office of Singapore’s Annual Audit
+                            Report findings pertaining to control weaknesses and non-compliance in Singapore’s
+                            Ministries and Statutory Boards
+                        </li>
+
+
+                    </ul>
+                </div>
+                <div class="flex-grow-1"></div>
+                <div class="flex-shrink-0"><span class="text-primary">Februrary 2018 - May 2018</span></div>
+            </div>
+        </div>
         </div>
     </section>
     <hr class="m-0" />
