Added line for CapOne Experience

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                                 a 4-step reporting tool using JavaScript, Vue and REST API
                             </li>
 
+                            <li>
+                                Designed unit and integration tests to ensure end-to-end functionality of incident
+                                reporting tool using the Cypress testing framework
+                            </li>
+
                         </ul>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">June 2021 - August 2021</span></div>
