--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <span class="text-primary">Ho</span>
                 </h1>
                 <div class="subheading mb-5">
-                    205 E Clark Street · Champaign, IL 61820 · (217) 974-5482 ·
+                    Champaign, IL · (217) 974-5482 ·
                     <a href="mailto:ysho2@illinois.edu">ysho2@illinois.edu</a>
                 </div>
                 <p class="lead mb-5">Hi, I am Yi! I am a rising Senior studying Computer Science + Economics and
